--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.adrenak.univoice": "1.1.4",
     "com.unity.collab-proxy": "1.15.18",
     "com.unity.feature.development": "1.0.1",
     "com.unity.feature.vr": "1.0.0",
@@ -45,5 +46,17 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "registry.npmjs.org",
+      "url": "https://registry.npmjs.org",
+      "scopes": [
+        "com.adrenak.airpeer",
+        "com.adrenak.unimic",
+        "com.adrenak.univoice",
+        "org.npmjs"
+      ]
+    }
+  ]
 }
