--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
-/[Ll]ibrary/
+/[Ll]ibrary/*
 /[Tt]emp/
 /[Oo]bj/
 /[Bb]uild/
@@ -94,3 +94,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+
+# Explicitly Allow Fishnet Settings
+!/[Ll]ibrary/
+!/[Ll]ibrary/FishNet.Runtime.Editor.PrefabObjects.Generation.Settings.json
